# whisper-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dep-audit.yml  publish.yml
scripts/: gen_graph.py
tests/: test_whisper_id.py
whisper_id/: __init__.py  graph.py
