[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-id"
version = "0.4.0"
description = "Give any Python agent a real, routable Whisper IPv6 identity, safe egress, full control plane, and the keyed Whisper security graph."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Whisper Security" }]
keywords = ["whisper", "agent", "identity", "ipv6", "egress", "proxy", "dns"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: System :: Networking",
  "Intended Audience :: Developers",
]

[project.optional-dependencies]
socks = ["PySocks>=1.7"]

[project.urls]
Homepage = "https://whisper.online"
Source = "https://github.com/whisper-sec/whisper-py"
Issues = "https://github.com/whisper-sec/whisper-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["whisper_id"]
